[package]
name = "tt-cli"
version = "0.6.0" # Same as `VERSION` const in src/main.rs
authors = ["XX <freecoder.xx@gmail.com>"]

[dependencies]
clap = "2.32"
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
tt-core = { git = "https://github.com/t-workware/tt-core.git" }

[dev-dependencies]
file_assertions = { git = "https://github.com/XX/file_assertions.git" }